# s3proxy-python

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  generate_flowchart.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: cluster-test.yml  docker-publish.yml  helm-install-test.yml  helm-lint.yml  helm-publish.yml  helm-test.yml  lint.yml  oom-test.yml  test.yml
benchmarks/: bench.py  docker-compose.yml  plot.py  profile.sh  run.sh
benchmarks/results/: .gitignore
chart/: Chart.yaml  README.md  values.yaml
chart/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  gateway-service.yaml  ingress.yaml  pdb.yaml  secret.yaml  service.yaml
e2e/: cluster.sh  docker-compose.cluster.yml  docker-compose.e2e.yml  docker-compose.helm-test.yml  docker-compose.yml  test-cluster.sh  test-e2e-fast.sh  test-helm-with-load.sh  test-helm.sh
e2e/clickhouse/: test.sh
e2e/clickhouse/templates/: backup-config.yaml  clickhouse-installation-restore.yaml  clickhouse-installation.yaml
e2e/common/: s3-credentials.yaml
e2e/elasticsearch/: test.sh
e2e/elasticsearch/templates/: elasticsearch-cluster-restore.yaml  elasticsearch-cluster.yaml  esrally-job.yaml  s3-credentials.yaml
e2e/postgres/: test.sh
e2e/postgres/templates/: backup.yaml  postgres-cluster-restore.yaml  postgres-cluster.yaml  s3-credentials.yaml
e2e/s3-compatibility/: test.sh
e2e/s3-compatibility/templates/: s3-tests-config.yaml  s3-tests-runner-job.yaml
e2e/scripts/: verify-encryption-k8s.sh
e2e/scylla/: test.sh
e2e/scylla/templates/: agent-config-secret.yaml  scylla-cluster-restore.yaml  scylla-cluster.yaml  storage-class.yaml
manifests/: Chart.yaml  values.yaml
manifests/charts/: .gitignore
manifests/templates/: configmap.yaml  deployment.yaml  gateway-service.yaml  ingress.yaml  minio.yaml  secret.yaml  service.yaml
s3proxy/: __init__.py  app.py  concurrency.py  config.py  crypto.py  errors.py  main.py  metrics.py  multipart.py  request_handler.py  s3client.py  utils.py  xml_responses.py  xml_utils.py
s3proxy/admin/: __init__.py  auth.py  collectors.py  router.py  templates.py
s3proxy/client/: __init__.py  s3.py  types.py  verifier.py
s3proxy/handlers/: __init__.py  base.py  buckets.py  multipart_ops.py  objects.py
s3proxy/handlers/multipart/: __init__.py  copy.py  lifecycle.py  list.py  upload_part.py
s3proxy/handlers/objects/: __init__.py  get.py  misc.py  put.py
s3proxy/routing/: __init__.py  dispatcher.py
s3proxy/state/: __init__.py  manager.py  metadata.py  models.py  recovery.py  redis.py  serialization.py  storage.py
s3proxy/streaming/: __init__.py  chunked.py
tests/: __init__.py  conftest.py  docker-compose.yml  test_crypto.py  test_handlers.py  test_integration.py  test_multipart.py  test_routing.py  test_sigv4.py  test_workflows.py  test_xml_responses.py
tests/ha/: test_ha_redis_e2e.py
tests/integration/: conftest.py  test_concurrent_operations.py  test_delete_objects_errors.py  test_download_range_requests.py  test_elasticsearch_range_scenario.py  test_entity_too_small_errors.py  test_entity_too_small_fix.py  test_handlers.py  test_integration.py  test_large_file_streaming.py  test_memory_leak.py  test_memory_usage.py  test_metadata_and_errors.py  test_multipart_range_validation.py  test_part_ordering.py  test_partial_complete_fix.py  test_redis_coordination.py  test_sequential_part_numbering.py  test_sequential_part_numbering_e2e.py  test_state_recovery.py  test_state_recovery_e2e.py  test_upload_part_copy.py
tests/unit/: test_admin.py  test_buffer_constants.py  test_concurrency_limit.py  test_crypto.py  test_forward_request.py  test_memory_concurrency.py  test_metrics.py  test_multipart.py  test_optimal_part_size.py  test_phantom_part_debug.py  test_redis_failures.py  test_routing.py  test_sigv4.py  test_state_recovery_fix.py  test_streaming_buffer_size.py  test_workflows.py  test_xml_responses.py
