[project]
name = "s3proxy"
version = "2026.2.0"
description = "Transparent S3 encryption proxy with AES-256-GCM"
keywords = [
    "s3",
    "encryption",
    "proxy",
    "s3-proxy",
    "client-side-encryption",
    "aes-256-gcm",
    "envelope-encryption",
    "kubernetes",
    "aws",
    "minio",
    "cloudflare-r2",
    "byok",
    "data-at-rest",
    "security",
]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "aioboto3>=13.0.0",
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "cryptography>=42.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "structlog>=24.1.0",
    "httpx[http2]>=0.26.0",
    "python-multipart>=0.0.6",
    # Performance optimizations
    "uvloop>=0.19.0; sys_platform != 'win32'",
    "orjson>=3.9.0",
    # Redis for distributed state
    "redis[hiredis]>=5.0.0",
    # Memory monitoring
    "psutil>=5.9.0",
    # Prometheus metrics
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "moto[s3]>=5.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "boto3-stubs[s3]>=1.34.0",
    "fakeredis>=2.21.0",
    "requests>=2.31.0",
]

[project.scripts]
s3proxy = "s3proxy.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
"s3proxy/admin/templates.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: End-to-end integration tests requiring real S3/MinIO (deselect with '-m \"not e2e\"')",
    "ha: HA tests with multiple s3proxy pods and real Redis (deselect with '-m \"not ha\"')",
]

[tool.mypy]
python_version = "3.14"
strict = true
