[project]
name = "s3proxy"
version = "2026.2.0"
description = "Transparent S3 encryption proxy with AES-256-GCM"
keywords = [
    "s3",
    "encryption",
    "proxy",
    "s3-proxy",
    "client-side-encryption",
    "aes-256-gcm",
    "envelope-encryption",
    "kubernetes",
    "aws",
    "minio",
    "cloudflare-r2",
    "byok",
    "data-at-rest",
    "security",
]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.45.0",
    "aioboto3>=15.5.0",
    "boto3>=1.40.0",
    "botocore>=1.40.0",
    "cryptography>=46.0.0",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.14.0",
    "structlog>=25.5.0",
    "httpx[http2]>=0.28.0",
    "python-multipart>=0.0.26",
    # Performance optimizations
    "uvloop>=0.22.0; sys_platform != 'win32'",
    "orjson>=3.11.0",
    # Redis for distributed state
    "redis[hiredis]>=7.4.0",
    # Memory monitoring
    "psutil>=7.2.0",
    # Prometheus metrics
    "prometheus-client>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.8.0",
    "moto[s3]>=5.1.0",
    "ruff>=0.15.0",
    "mypy>=1.20.0",
    "boto3-stubs[s3]>=1.42.0",
    "fakeredis>=2.35.0",
    "requests>=2.33.0",
]

[project.scripts]
s3proxy = "s3proxy.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Inline HTML/CSS/JS template has unavoidably long lines
"s3proxy/admin/templates.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: End-to-end integration tests requiring real S3/MinIO (deselect with '-m \"not e2e\"')",
    "ha: HA tests with multiple s3proxy pods and real Redis (deselect with '-m \"not ha\"')",
]

[tool.mypy]
python_version = "3.14"
strict = true
